knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/Task__x.object-meta.xml
<CustomObject>
    <externalDataSource>CORP_Org</externalDataSource>
    <externalName>Task</externalName>
    <label>Task</label>
    <pluralLabel>Tasks</pluralLabel>
</CustomObject>