knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <externalDeveloperName>ActivityDate</externalDeveloperName>
    <label>Due Date Only</label>
    <type>Date</type>
</CustomField>