knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Amount_on_Hold_c__c.field-meta.xml
<CustomField>
    <fullName>Amount_on_Hold_c__c</fullName>
    <externalDeveloperName>Amount_on_Hold__c</externalDeveloperName>
    <label>Amount on Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>