knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Approved_By_c__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_c__c</fullName>
    <externalDeveloperName>Approved_By__c</externalDeveloperName>
    <label>Approved By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>