knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <externalDeveloperName>CallType</externalDeveloperName>
    <label>Call Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>