knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Event_Topic_c__c.field-meta.xml
<CustomField>
    <fullName>Event_Topic_c__c</fullName>
    <externalDeveloperName>Event_Topic__c</externalDeveloperName>
    <label>Event Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>