knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/IsHighPriority__c.field-meta.xml
<CustomField>
    <fullName>IsHighPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsHighPriority</externalDeveloperName>
    <label>High Priority</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>