knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/New_Rate_c__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_c__c</fullName>
    <externalDeveloperName>New_Rate__c</externalDeveloperName>
    <label>New Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>