knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Number_of_Actual_Residents_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Actual_Residents_in_Attendance__c</fullName>
    <externalDeveloperName>Number_of_Actual_Residents_in_Attendance__c</externalDeveloperName>
    <label>Number of Actual Residents in Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>