knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Outbound_Mailing_Instructions_c__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Mailing_Instructions_c__c</fullName>
    <externalDeveloperName>Outbound_Mailing_Instructions__c</externalDeveloperName>
    <label>Outbound Mailing Instructions</label>
    <length>80</length>
    <type>Text</type>
</CustomField>