knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Pre_Fill_Application_c__c.field-meta.xml
<CustomField>
    <fullName>Pre_Fill_Application_c__c</fullName>
    <externalDeveloperName>Pre_Fill_Application__c</externalDeveloperName>
    <label>Complete App for Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>