knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <externalDeveloperName>Priority</externalDeveloperName>
    <label>Priority</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>