knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <externalDeveloperName>RecordTypeId</externalDeveloperName>
    <label>Task Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>