knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/RecurrenceEndDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceEndDateOnly__c</fullName>
    <externalDeveloperName>RecurrenceEndDateOnly</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>