knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/RecurrenceMonthOfYear__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceMonthOfYear__c</fullName>
    <externalDeveloperName>RecurrenceMonthOfYear</externalDeveloperName>
    <label>Recurrence Month of Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>