knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/RecurrenceRegeneratedType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceRegeneratedType__c</fullName>
    <externalDeveloperName>RecurrenceRegeneratedType</externalDeveloperName>
    <label>Repeat This Task</label>
    <length>40</length>
    <type>Text</type>
</CustomField>