knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/RecurrenceStartDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateOnly__c</fullName>
    <externalDeveloperName>RecurrenceStartDateOnly</externalDeveloperName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>