knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Return_Airbill_c__c.field-meta.xml
<CustomField>
    <fullName>Return_Airbill_c__c</fullName>
    <externalDeveloperName>Return_Airbill__c</externalDeveloperName>
    <label>Return Airbill #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>