knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Return_Mailing_Instructions_c__c.field-meta.xml
<CustomField>
    <fullName>Return_Mailing_Instructions_c__c</fullName>
    <externalDeveloperName>Return_Mailing_Instructions__c</externalDeveloperName>
    <label>Return Mailing Instructions</label>
    <length>80</length>
    <type>Text</type>
</CustomField>