knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/SeriesAccess_c__c.field-meta.xml
<CustomField>
    <fullName>SeriesAccess_c__c</fullName>
    <externalDeveloperName>SeriesAccess__c</externalDeveloperName>
    <label>Task Series</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>