knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>