knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/TaskRecurrenceid_c__c.field-meta.xml
<CustomField>
    <fullName>TaskRecurrenceid_c__c</fullName>
    <externalDeveloperName>TaskRecurrenceid__c</externalDeveloperName>
    <label>TaskRecurrenceid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>