knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/TaskSeriesDescribe_c__c.field-meta.xml
<CustomField>
    <fullName>TaskSeriesDescribe_c__c</fullName>
    <externalDeveloperName>TaskSeriesDescribe__c</externalDeveloperName>
    <label>Series Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>