knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Task__x/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <externalDeveloperName>WhatId</externalDeveloperName>
    <label>Related To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>